# SeisMonitor-Platform

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/skills/kafka-debug/: SKILL.md
gcp/: deploy.sh
gcp/bigquery/: schema.sql
gcp/bigquery/migrations/: 002_quality_metrics.sql
gcp/dashboard/: app.py  requirements.txt
gcp/dedup/: Dockerfile  dedup_pipeline.py  main.py  requirements.txt
gcp/ingester/: bq_client.py  main.py  pipeline.py  source_pipeline.py
src/quake_stream/: __init__.py  cli.py  consumer.py  dashboard_web.py  deduplicator.py  logging_config.py  map_layers.py  models.py  models_v2.py  multi_producer.py  normalizer.py  producer.py  region_priority.py  tectonic.py  usgs_client.py
src/quake_stream/clients/: fdsn_client.py
src/quake_stream/parsers/: __init__.py  quakeml.py
src/quake_stream/sources/: __init__.py
tests/: test_quakeml_parser.py  test_region_priority.py  test_usgs_client.py
